--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>留言板</title>
   <style>
-    .center{
+    .right{
       float: right;
+    }
+    span{
+      font-size: 30px;
     }
   </style>
 </head>
 <body>
   <div>
-    <div class="center">
-      <a href="/user/center">个人中心</a>
-    </div>
+    <a href="/user/center" class="right">个人中心</a>
     <div>
       <img src="<%= user.avatar %>" width="50px">
-      <h3><%= user.nickname %></h3>
+      <span><%= user.nickname %></span>
     </div>
     <textarea id="msg" cols="30" rows="10"></textarea>
     <div>
