--- a/views/center.ejs
+++ b/views/center.ejs
@@ -20,7 +20,7 @@
   </div>
   <div>
     <div class="left">
-      <a href="">
+      <a href="/user/upload">
         <img src="<%= user.avatar %>" width="75px">
       </a>
     </div>
@@ -31,7 +31,8 @@
         <a href="javascript:;" onclick="changeNick()">修改昵称</a>
       </div>
       <div>
-        <a href="">修改密码</a>
+        <a href="javascript:;" onclick="changePwd()">修改密码</a>
+        <div id="pwd"></div>
       </div>
     </div>
   </div>
@@ -67,6 +68,33 @@
           $("#nick").html(val);
         }
       });
+    }
+    
+    // 点击显示修改密码的文本框
+    function changePwd(){
+      $("#pwd").html("<input type='text' onblur='send2()'>");
+      $("input").focus();
+    }
+    // 发送修改密码的请求
+    function send2(){
+      var val = $("input").val().trim();
+      if(val==""){ // 没有输入新密码,不发送请求,还原
+        $("#pwd").html("");
+        return ;
+      }
+      // 发送请求
+      $.ajax({
+        url: "/user/changePwd",
+        data: {pwd: val},
+        success: function(result){
+          if(result.status!=0){
+            alert("修改失败");
+            return ;
+          }
+          alert("修改成功,重新登录");
+          location.href = "/";
+        }
+      })
     }
   </script>
 </body>
